Changelog for Touchdown
=======================

0.6.1 (unreleased)
------------------

- Nothing changed yet.


0.6.0 (2016-01-26)
------------------

- SSL certificate chains are now validated. This is not yet complete
  verification, but should stop accidentally using entirely the wrong chain for
  your cert.

- CloudFront now supports updates. If you upload a new certificate, your
  CloudFront distribution will be updated accordingly.

- There is now much better diffing when generating plans - you can now diff
  inside JSON blobs specified for autoscaling user data.


0.5.3 (2016-01-19)
------------------

- Allow setting `ssl_policy` on custom origins.

- Allow setting `compress` True/False on a behaviour.


0.5.2 (2016-01-19)
------------------

- Fix network acl entry port validation and allow 'port' to be set to '*'.

- Fix issue updating an Assume Role Policy.

- Fix some issues diffing dicts.


0.5.1 (2016-01-17)
------------------

- Touchdown now reports resource changes better, especially when attributes
  transition from unset to set states.

- Various diffing bug fixes.


0.5.0 (2016-01-15)
------------------

- Add support for AWS NAT Gateway.

- Add support for read and write operations against local files::

    folder = workspace.add_local_folder(name=os.getcwd())
    local_file = folder.add_file(name='production.cfg')

- The contents of any file can be assigned to any string argument. For
  example::

      aws.add_keypair(
          name='my-keypair',
          public_key=folder.add_file(name='production.pub'),
      )

- Add support for GPG encryption. This layers upon the local file system
  abstraction::

    gpg = workspace.add_gpg()
    local_file = gpg.add_cipher(file=local_file)

- Add integration between Amazon KMS and the local file system abstraction::

    kms = aws.add_key(name='my-deployment-key')
    local_file = kms.add_cipher(file=local_file)

- Add support for Amazon KMS Grants.
